2008-03-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/html1_gantt.xsl:
	Use long resource name in exported HTML if no short resource name is given,
	also for milestone tasks (bug #439180).

2008-03-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-task-manager.c:
	(remove_parent_predecessors_from_dependency_graph),
	(remove_parent_from_dependency_graph),
	(add_parent_predecessors_to_dependency_graph),
	(add_parent_to_dependency_graph),
	(task_manager_build_dependency_graph),
	(task_manager_do_forward_pass), (task_manager_do_backward_pass),
	(check_move_traverse_recursive), (check_move_traverse),
	(mrp_task_manager_check_move):
	Fixed bug #382548. Planner now correctly detects loops that would be created
	by indenting a task that is a predecessor of the task that would become its
	parent, so it will no longer crash trying to undo an invalid action.
	* tests/task-test.c: (main):
	Added regression tests for bug #382548 and related issues.

2008-03-03  Kurt Maute  <kurt@maute.us>
	* src/planner-task-view.c
	Patch to correct L10N error per bug # 520064

2008-02-27  Kurt Maute  <kurt@maute.us>
	* src/planner-task-tree.c
	* src/planner-gantt-model.c
	* src/planner-gantt-model.h
	* src/planner-task-view.c:
	Patch to add % complete column to task view.  Original patch by Robert
	Mibus, enhanced by me to allow edit of the % complete column in task
	view.  Bug # 379975


2008-02-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/planner-task-tree.c: (planner_task_tree_indent_task),
	(planner_task_tree_unindent_task),
	(planner_task_tree_move_task_up):
	Keep selection as much as possible when indenting and unindenting.

2008-02-15  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/eel-canvas-rect.c: (eel_canvas_rect_bounds):
	* src/planner-gantt-chart.c: (gantt_chart_map),
	(gantt_chart_size_allocate), (gantt_chart_reflow_idle),
	(planner_gantt_chart_reflow_now),
	(gantt_chart_project_start_changed),