@@ -1,3 +1,11 @@
+2008-03-26  Maurice van der Pot  <griffon26@kfk4ever.com>
+
+	* src/planner-gantt-view.c: (gantt_view_create_widget):
+	Added percent	complete column to gantt view as well.
+	* src/planner-task-tree.c: (task_tree_complete_edited),
+	(task_tree_add_column):
+	Added range checking for percent complete column to prevent GTK warnings.
+
 2008-03-15  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* data/stylesheets/html1_gantt.xsl:
